# tiny-scientist

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY_ADVISORY_TEMPLATE.md  compare_ethical_scores.py  compare_ethical_scores_fixed.py  config.template.toml  correlation_analysis.py  create_sampled_dataset.py  debug_mcp.py  example_react_experiment.py  filter_safe_prompts.py  fuse.py  main_experiment.py  pyproject.toml  review_papers_from_reports.py  run_ethical_evaluation.py  run_experiment.sh  run_main_experiment.sh  run_main_experiment_gpt41.sh  run_main_experiment_other.sh  run_main_experiment_qwen.sh  run_review.py  run_tool_experiment.sh  stats_analyzer.py  test_api_key.py  test_drawer_gemini.py  test_gemini_diagram.py  test_mcp_agent.py  test_mcp_server.py  test_paper_search.py  test_review_rewrite.py  test_writer_fix.py  test_writer_mini.py  tool_experimenter.py
backend/: app.py  demo_cache.py  run_app.sh  run_demo.sh
comparison_test/: DIAGRAM_TOOL_TROUBLESHOOTING.md  IMPROVED_DIAGRAM_TOOL_REFACTORED.md  README_DrawIO.md  analyze_results.py  compare_idea_generation.py  debug_mcp_communication.py  drawio_diagram_generator.py  improved_diagram_tool.py  install_diagram_tools.sh  jsonl_to_csv_converter.py  new_diagram_tool.py  processed_results.csv  results_with_tools.jsonl  results_without_tools.jsonl  test_drawio_fix.py  test_improved_diagram_tool.py  test_improved_tool_direct.py  test_mcp_paper_search.py  test_paper_search_tool.py  test_s2_api.py  test_tool_use.py  tool_use_comparison_test.py
configs/: cite_prompt.yaml  coder_prompt.yaml  diagram_prompt.yaml  param.yaml  reviewer_prompt.yaml  thinker_prompt.yaml  writer_prompt.yaml
examples/: code.py  (+22 more)
(+383 files in other folders)
